# avr-hal

avr-specs/: avr-atmega32u4.json
boards/arduino-leonardo/: Cargo.toml
chips/atmega32u4-hal/: Cargo.toml
chips/atmega32u4-hal/src/: lib.rs  usb.rs
