[package]
name = "atmega32u4-hal"
version = "0.1.0"
authors = ["Rahix <rahix@rahix.de>"]
edition = "2018"

[features]
rt = ["avr-device/rt"]
usb = ["usb-device", "usbd-serial"]

[dependencies]
avr-hal-generic = { path = "../../avr-hal-generic/" }

# Usb
usb-device = { version = "0.2", optional = true }
usbd-serial = { version = "0.1", optional = true }

[dependencies.avr-device]
version = "0.2.2"
features = ["atmega32u4"]
